<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <TextView  
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:text="HelloViews"/>
    <Button
        android:id="@+id/start_gridview"
        android:text="@string/gridview_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_linearlayout"
        android:text="@string/linearlayout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_relativelayout"
        android:text="@string/relativelayout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_tablelayout"
        android:text="@string/tablelayout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_tabwidget"
        android:text="@string/tabwidget_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_datepicker"
        android:text="@string/datepicker_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_timepicker"
        android:text="@string/timepicker_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_spinner"
        android:text="@string/spinner_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/start_autocomplete"
        android:text="@string/autocomplete_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>

